# riskkernel

./: .dockerignore  .env.example  .gitignore  .goreleaser.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  go.mod  go.sum
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude-pr-review.yml  claude.yml  codeql.yml  homebrew-publish.yml  python-publish.yml  python.yml  release.yml  typescript-publish.yml  typescript.yml
api/v1/: openapi.yaml  otel-genai.md
benchmark/: .gitignore  README.md  benchmark.py  mock_provider.py  pricing.json  recovery.py
cmd/riskkernel/: admin.go  admin_test.go  approvals.go  completion.go  completion_test.go  doctor.go  doctor_test.go  healthcheck.go  init.go  init_test.go  main.go  memory.go  policy.go
docs/: APPROVALS_SLACK.md  BUDGETS.md  COMPLIANCE.md  HOMEBREW.md  METRICS.md  OTLP_INGRESS.md  PERFORMANCE.md  POLICY.md  POSTGRES.md  PROVIDERS.md  RESUME.md  TROUBLESHOOTING.md  VISION.md
examples/autogen/: README.md  agent.py  requirements.txt
examples/codebase-qa/: README.md  agent.py  requirements.txt  runaway.cast
examples/kill-9-resume/: README.md  agent.py  demo.sh  requirements.txt  resume.cast
examples/langchain/: README.md  agent.py  requirements.txt
examples/mcp/: README.md  demo.py
examples/memory/: README.md
examples/otel/: README.md  docker-compose.yaml
examples/policy/: riskkernel.yaml
examples/quickstart-compose/: README.md  agent.sh  docker-compose.yml  mock-llm.conf
examples/vercel-ai-sdk/: README.md  index.ts  package.json  tsconfig.json
examples/wrap-your-agent/: README.md  agent.py  requirements.txt
internal/app/: bootstrap.go
internal/approval/: gate.go  gate_test.go  notifier.go  policy.go  policy_test.go  slack.go  slack_test.go  webhook.go
internal/audit/: compliance.go  (+1 more)
scripts/: gen-homebrew-formula.sh
sdks/python/: README.md  pyproject.toml
sdks/python/riskkernel/: __init__.py  approval.py  client.py  errors.py  runtime.py
sdks/python/riskkernel/adapters/: __init__.py  autogen.py  claude_agent.py  crewai.py  langchain.py  llama_index.py  openai_agents.py  pydantic_ai.py
sdks/python/tests/: test_autogen.py  test_crewai.py  test_llama_index.py  test_pydantic_ai.py  test_sdk.py
(+108 files in other folders)
